--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   },
   "dependencies": {
     "aws-sdk": "^2.635.0",
-    "source-map-support": "^0.5.10",
     "bluebird": "^3.7.2",
+    "serverless": "^2.11.1",
+    "source-map-support": "^0.5.10",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
-    "serverless-webpack": "^5.2.0",
+    "serverless-webpack": "^5.3.5",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
