--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "dependencies": {
     "aws-sdk": "^2.635.0",
     "bluebird": "^3.7.2",
-    "serverless": "^2.11.1",
+    "copy-webpack-plugin": "^8.0.0",
+    "serverless": "^2.30.3",
     "source-map-support": "^0.5.10",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
+    "babel-plugin-module-resolver": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-webpack": "^5.3.5",
     "ts-loader": "^5.3.3",
