--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bluebird": "^3.7.2",
     "copy-webpack-plugin": "^8.0.0",
     "serverless": "^2.30.3",
+    "serverless-bundle": "^4.2.2",
     "source-map-support": "^0.5.10",
     "uuid": "^3.4.0"
   },
@@ -18,9 +19,11 @@
     "@types/node": "^10.12.18",
     "babel-plugin-module-resolver": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "serverless-plugin-include-dependencies": "^4.1.0",
+    "serverless-plugin-typescript": "^1.1.9",
     "serverless-webpack": "^5.3.5",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.2.4",
+    "typescript": "^3.9.9",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
   },
