--- a/src/service/orders/serverless.yml
+++ b/src/service/orders/serverless.yml
@@ -5,10 +5,11 @@ service:
 #org: your-org-name
 
 custom:
-  webpack:
-    webpackConfig: webpack.config.js
-    includeModules: true
-  stage: ${file(../../serverless.common.yml):custom.stage}
+  ${file(../../../serverless.common.yml):custom}
+  # webpack:
+  #   webpackConfig: webpack.config.js
+  #   includeModules: true
+  # stage: ${file(../../serverless.common.yml):custom.stage}
 
 # Add the serverless-webpack plugin
 plugins:
@@ -23,6 +24,7 @@ provider:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
   environment:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
+    ORDERS_TABLE: orders-${opt:stage, self:provider.stage}
   iamRoleStatements:
     - Effect: Allow
       Action:
