--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,10 @@
     "outDir": "lib"
   },
   "include": [
-    "./**/*.ts",
-    "src/app/service/department"
-, "webpack.config.js", "webpack.config.js"  ],
+    "./**/*.ts", 
+    "webpack.config.js", 
+    "webpack.config.js"  
+  ],
   "exclude": [
     "node_modules/**/*",
     ".serverless/**/*",
