--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Serverless webpack example using Typescript",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test ./node_modules/.bin/jest --ci --verbose"
   },
   "dependencies": {
     "aws-sdk": "^2.635.0",
@@ -15,15 +15,28 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-module-resolver": "^1.2.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "jest": "^26.6.3",
     "serverless-plugin-include-dependencies": "^4.1.0",
     "serverless-plugin-typescript": "^1.1.9",
     "serverless-webpack": "^5.3.5",
     "ts-loader": "^5.3.3",
     "typescript": "^3.9.9",
+    "typescript-eslint": "0.0.1-alpha.0",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
   },
