--- a/src/orders-api/package.json
+++ b/src/orders-api/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test ./node_modules/.bin/jest --ci --verbose"
   },
   "dependencies": {
     "aws-sdk": "^2.635.0",
@@ -12,13 +12,19 @@
     "copy-webpack-plugin": "^8.0.0",
     "serverless": "^2.30.3",
     "serverless-bundle": "^4.2.2",
+    "serverless-domain-manager": "^5.1.0",
     "source-map-support": "^0.5.10",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
+    "babel-jest": "^26.6.3",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "jest": "^26.6.3",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
