--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Serverless webpack example using Typescript",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/jest --ci --verbose"
+    "test": "jest"
   },
   "dependencies": {
     "aws-sdk": "^2.635.0",
+    "aws-xray-sdk": "^3.2.0",
     "bluebird": "^3.7.2",
     "copy-webpack-plugin": "^8.0.0",
     "serverless": "^2.30.3",
@@ -19,11 +20,13 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
     "@types/aws-lambda": "^8.10.17",
+    "@types/jest": "^26.0.21",
     "@types/node": "^10.12.18",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -31,6 +34,8 @@
     "eslint-plugin-module-resolver": "^1.2.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.6.3",
+    "jest-dynalite": "^3.3.1",
+    "mockdate": "^3.0.4",
     "serverless-plugin-include-dependencies": "^4.1.0",
     "serverless-plugin-typescript": "^1.1.9",
     "serverless-webpack": "^5.3.5",
@@ -39,6 +44,9 @@
     "typescript-eslint": "0.0.1-alpha.0",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
+  },
+  "jest": {
+    "preset": "jest-dynalite"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT"
