--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "serverless-plugin-typescript": "^1.1.9",
     "serverless-webpack": "^5.3.5",
     "ts-loader": "^5.3.3",
+    "ts-mockito": "^2.6.1",
     "typescript": "^3.9.9",
     "typescript-eslint": "0.0.1-alpha.0",
     "webpack": "^4.29.0",
